--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,12 @@ button {
    cursor: pointer;
    box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
    padding: 15px;
+   transition: background-color 0.3s ease-in;
+}
+
+button:hover {
+   background-color: #f6980c;
+   box-shadow: rgba(246 152 12 / 20%)
 }
 
 .about {
@@ -78,4 +84,116 @@ button {
    padding: 20px 25px;
    border-radius: 20px;
    margin-top: 20px;
+}
+
+.form {
+   background-color: #1D263A;
+   color: #fff;
+   padding-top: 115px;
+   padding-bottom: 115px;
+   text-align: center;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.form form {
+   display: grid;
+   grid-gap: 20px;
+   margin-top: 60px;
+}
+
+.form h1 {
+   font-size: 48px;
+}
+
+.form p {
+   font-size: 18px;
+   opacity: 0.65;
+}
+
+.form__container {
+   width: 550px;
+}
+
+.form__group {
+   display: flex;
+   flex-direction: column;
+   text-align: left;
+
+}
+
+.form label {
+   font-size: 18px;
+   font-weight: 600;
+   margin-bottom: 15px;
+}
+
+.form input {
+   font-size: 18px;
+   color: #213053;
+   height: 60px;
+   padding: 0px 20px;
+   border-radius: 15px;
+   border: none;
+}
+
+input {
+   outline: none;
+}
+
+.form select {
+   font-size: 18px;
+   color: #213053;
+   height: 60px;
+   padding: 0px 20px;
+   border-radius: 15px;
+   border: none;
+}
+
+select {
+   appearance: none;
+}
+
+
+.form__submit {
+   font-size: 18px;
+   font-weight: 600;
+   margin-top: 40px;
+}
+
+footer {
+   padding: 90px 20px;
+   font-size: 16px;
+   font-weight: 600;
+}
+
+.footer__container {
+   display: flex;
+   justify-content: center;
+}
+
+.footer__copyright {
+   margin-top: 40px;
+   text-align: center;
+   opacity: 0.5;
+}
+
+.footer__group {
+   margin-right: 80px;
+}
+
+div .footer__links {
+   display: flex;
+   flex-direction: column;
+}
+
+.footer__group h3 {
+   font-size: 16px;
+   opacity: 0.7;
+   margin-bottom: 30px;
+}
+
+.footer__links a {
+   margin-bottom: 15px;
 }
