--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@ header {
    justify-content: space-between;
    align-items: center;
    padding: 20px;
+   position: sticky;
+   top: 0;
+   background-color: #fff;
+   z-index: 1;
+
 }
 
 .header__logo {
@@ -57,15 +62,34 @@ button:hover {
 
 .about__info {
    max-width: 550px;
+   animation-duration: 2s;
+   animation-iteration-count: 1;
 }
 
 .about__image {
    width: 500px;
 }
 
+.about__images {
+   animation-duration: 2s;
+   animation-iteration-count: 1;
+}
+
 .about__sun-image {
    width: 100px;
    height: 100px;
+   animation: rotation 10s linear infinite;
+   position: absolute;
+}
+
+@keyframes rotation {
+   0% {
+      transform: rotate(0deg);
+   }
+
+   100% {
+      transform: rotate(360deg);
+   }
 }
 
 .about h1 {
@@ -196,4 +220,75 @@ div .footer__links {
 
 .footer__links a {
    margin-bottom: 15px;
+}
+
+/* Планшеты */
+@media (max-width: 1024px) {
+   .about {
+      padding: 115px 20px;
+   }
+
+   .about h1 {
+      font-size: 36px;
+      line-height: 40px;
+   }
+
+   .about__image {
+      width: 280px;
+   }
+
+   .about__sun-image {
+      width: 75px;
+      height: 75px;
+   }
+}
+
+/* Мобильные устройства */
+@media (max-width: 720px) {
+   header {
+      padding: 200px 10px;
+   }
+
+   .header__logo {
+      height: 20px;
+   }
+
+   header a {
+      margin-right: 10px;
+   }
+
+   .about {
+      flex-direction: column-reverse;
+      padding: 50px 10px;
+   }
+
+   .about h1 {
+      font-size: 36px;
+      line-height: 40px;
+   }
+
+   .about__image {
+      width: 280px;
+   }
+
+   .about__sun-image {
+      width: 75px;
+      height: 75px;
+   }
+
+   .form {
+      padding: 50px 10px;
+   }
+
+   .form h1 {
+      font-size: 36px;
+   }
+
+   footer {
+      padding: 50px 10px;
+   }
+
+   .footer__container {
+      flex-direction: column;
+   }
 }
