--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,7 @@ button:hover {
    }
 }
 
+/* секция О нас */
 .about h1 {
    font-size: 70px;
    line-height: 76px;
@@ -110,6 +111,139 @@ button:hover {
    margin-top: 20px;
 }
 
+/* Секция "Нам доверяют"  */
+.features {
+   background-color: white;
+   padding: 115px 60px;
+
+}
+
+.features__border {
+   margin: 50px 0 50px 0;
+   border: solid;
+   border-width: 1px;
+   border-color: #E6EAF4;
+
+}
+
+.features__feedback {
+   display: flex;
+}
+
+.features__feedback-left {
+   margin-right: 10px;
+}
+
+.features__feedback-left h2 {
+   font-size: 48px;
+}
+
+.features__feedback-left p {
+   font-size: 18px;
+   line-height: 26px;
+   opacity: 0.7;
+}
+
+.features__feedback-right {
+   height: 300px;
+   display: flex;
+   align-items: center;
+}
+
+.features__box {
+   padding: 30px 40px 25px 40px;
+   color: white;
+   border-radius: 25px;
+}
+
+.features__box h3 {
+   margin-top: 0;
+   margin-bottom: 20px;
+   font-size: 48px;
+}
+
+.features__savings-box {
+   height: 50%;
+   background-color: #dc5e26;
+   box-shadow: 0px 6px 0 rgb(221 95 38 / 20%);
+   margin-right: 30px;
+}
+
+.features__rate-box {
+   height: 50%;
+   background-color: #1D263A;
+   box-shadow: 0px 6px 0 rgb(29 38 58 / 20%);
+}
+
+/* карточки достижений */
+.cards {
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+   grid-gap: 50px;
+}
+
+.card {
+   padding: 35px 40px 25px 40px;
+   border: solid;
+   border-width: 1px;
+   border-radius: 5px;
+   border-color: #D9E4E6;
+
+}
+
+.card p {
+   font-size: 16px;
+   line-height: 22px;
+   opacity: 0.8;
+}
+
+.card__logo {
+   height: 100px;
+   width: 100px;
+   font-size: 32px;
+   font-weight: 700;
+   background-color: #eaeff9;
+   border-radius: 50%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.firstcard__color {
+   color: #ffb406;
+}
+
+.secondcard__color {
+   color: #ad1714;
+}
+
+.thirdcard__color {
+   color: #22a030;
+}
+
+.stars {
+   color: #ff7039
+}
+
+/* Секция Зарядите дом*/
+.promo {
+   display: flex;
+}
+
+.promo__image {
+   background-image: url(../img/promo.jpg);
+   background-size: cover;
+   background-position: center;
+   width: 50%;
+   flex-shrink: 0;
+}
+
+.promo__right {
+   background: #dd5f26;
+   padding: 160px 60px;
+}
+
+/* Форма ??? */
 .form {
    background-color: #1D263A;
    color: #fff;
@@ -255,6 +389,94 @@ div .footer__links {
 
    header a {
       margin-right: 10px;
+   }
+
+   .features {
+      margin-bottom: 40px;
+      padding: 50px, 10px;
+   }
+
+   .features__feedback {
+      flex-direction: column;
+   }
+
+   .features__feedback-left {
+      margin-right: 0;
+   }
+
+   .features__feedback-left h2,
+   .features__box h3 {
+      font-size: 36px;
+   }
+
+   .features__feedback-right {
+      flex-direction: column;
+      align-items: initial;
+   }
+
+   .features__savings-box {
+      margin-right: 0;
+      margin-bottom: 30px;
+   }
+
+   .cards {
+      display: grid;
+      grid-template-columns: auto;
+   }
+
+   .promo {
+      flex-direction: column-reverse;
+   }
+
+   .promo__right {
+      padding: 50px 10px;
+   }
+
+   .promo__image {
+      width: 100%;
+      height: 500px;
+   }
+
+   .promo__text {
+      background-color: white;
+      padding: 30px 40px;
+      font-size: 20px;
+      line-height: 22px;
+      font-weight: 500;
+      border-radius: 25px;
+   }
+
+   .promo__text p::before {
+      content: '';
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background-color: #ec6b29;
+      margin-right: 10px;
+   }
+
+   .promo__text p {
+      opacity: 0.8;
+   }
+
+   .promo__text button {
+      background-color: #107b1c;
+      margin-top: 20px;
+      font-weight: 600;
+      font-size: 18px;
+      box-shadow: 0 16px 36px rgb(16 122 28 / 30%);
+      padding: 15px 30px;
+   }
+
+   .promo__button-wrap {
+      display: flex;
+      justify-content: center;
+   }
+
+   .promo__text button i {
+      font-size: 15px;
+      margin-left: 5px;
    }
 
    .about {
